apps/stirling-pdf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: stirling-pdf
  type: ClusterIP
